# ocabox-server

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  definitions.py  docker-compose.yaml  ocabox-server_bases.py  pyproject.toml  tic.service  update_tic
doc/: errors.md
obsrv/: config.yaml  main.py  ob_config.py
obsrv/communication/: base_request_solver.py  base_request_solver_protocol.py  base_router_with_config.py  internal_client_api.py  internal_client_request_solver.py  nats_streams.py  request_solver.py  router.py
obsrv/comunication/: base_request_solver.py  base_request_solver_protocol.py  internal_client_api.py  internal_client_request_solver.py  message_id_deque.py  request_solver.py  router.py
obsrv/configuration/: config.yaml  sample_config.yaml  tree_build_example.py  tree_build_oca.py
obsrv/data_colection/: ocaboxtask.py  tree_data.py
obsrv/data_colection/alpaca_api/: connector.py  exceptions.py  observatory.py  standard_telescope_components.py
obsrv/data_colection/base_components/: address_dispatcher.py  tree_base_broker.py  tree_base_broker_default_target.py  tree_base_provider.py  tree_broker.py  tree_component.py  tree_provider.py  tree_provider_frontend.py
obsrv/data_colection/iris_api/: connector.py  exceptions.py  observatory.py
obsrv/data_colection/resource_manager/: errors.py  resource.py  resource_manager.py
obsrv/data_colection/specialistic_components/: tree_alpaca.py  tree_cctv.py  (+9 more)
obsrv/planrunner/: base_command.py  collective_command.py  command.py  command_args_reader.py  command_error.py  dither_data.py  errors.py  focusing_data.py  obs_pln_reader.py  plan_data.py  plan_manager.py  plan_status_map.py  plan_status_publisher.py  plan_task_manager.py  plan_task_manager_protocol.py  sequence_data.py
obsrv/protocols/: __init__.py  connector_factory.py
obsrv/telescope_devices/: device_tree.py  standard_components.py
obsrv/util_functions/: enum_map_base_class.py
obsrv/utils/: coordinates.py  observable.py  ocaboxtask.py  push_wiring.py  runtime_diagnostics.py  singleton.py  tree_data.py
test/: run_tests.py
test/alpaca.test/: alpaca.ipynb
test/communication/: message_id_deque.py  sample_test_resolver.py  test_base_request_solver.py  test_base_router_with_config.py  test_cycle_query_flow.py  test_request_solver.py  test_router.py
test/comunication/: message_id_deque.py  sample_test_resolver.py  test_base_request_solver.py  test_base_router_with_config.py  test_cycle_query_flow.py  test_request_solver.py  test_router.py
test/data_colection/: sample_test_value_provider.py
test/data_collection/: sample_test_value_provider.py
test/iris.test/: iris_integration.ipynb
test/plan_runner/: test_commands_args_map.py  test_dither_data.py  test_plan_manager.py
(+97 files in other folders)
