[tool.poetry]
name = "ocabox-server"
version = "1.0.0"
license = "MIT"
description = ""
authors = ["Ernest Lasek <elasek@akond.com>, Mikołaj Kałuszyński <mkalusz@camk.edu.pl>"]
readme = "README.md"
repository = "https://github.com/araucaria-project/ocabox-server"
keywords = ["ocabox-server"]
packages = [
    { include = "obsrv" },
    { include = "test" },
]

[tool.poetry.dependencies]
python = "^3.9"
pyzmq = "^25.0.2"
#msgpack = ">=1.0.3,<1.1.0"
ocabox-common = {git = "https://github.com/araucaria-project/ocabox-common.git"}
#ocabox-common = {path = "../ocabox-common/", develop = true}
confuse = ">=1.7.0,<1.8.0"
astropy = "^5.0.4"
aiohttp = "^3.9.1" #"">=3.8.1,<3.9.0"
#qasync = { version = ">=0.23.0", optional = true }
#PyQt5 = { version = ">=5.15.7,<5.16.0", optional = true }
pylint = {version = "^2.16.2", optional = true}
graphviz = {version = "^0.20.1", optional = true}
#param = "^1.12.3"  # needed only for ocaboxapi, TODO: check if optional?
pyaraucaria = {git = "https://github.com/araucaria-project/pyaraucaria.git"}
jupyter = {version = "^1.0.0", optional = true}
requests = {version = "^2.30.0", optional = true}
pyunifiprotect = "^4.9.0"
scikit-learn = ">=1.3.0"
serverish = {version = "^1.0.1", extras = ["messenger"]}
nats-py = "^2.3.1"
astroplan = "^0.9.0"




[tool.poetry.scripts]
tests = "test.run_tests:main"
server = "obsrv.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
