[tool.poetry]
name = "ocabox-server"
version = "2.0.1"
license = "MIT"
description = ""
authors = ["Ernest Lasek <elasek@akond.com>, Mikołaj Kałuszyński <mkalusz@camk.edu.pl>"]
readme = "README.md"
repository = "https://github.com/araucaria-project/ocabox-server"
keywords = ["ocabox-server"]
packages = [
    { include = "obsrv" },
    { include = "test" },
]

[tool.poetry.dependencies]
python = "^3.10"
pyzmq = "^25.0.2"
ocabox-common = {git = "https://github.com/araucaria-project/ocabox-common.git"}
confuse = ">=1.7.0,<1.8.0"
astropy = "^6.0.0"
aiohttp = "^3.9.1" #"">=3.8.1,<3.9.0"
#pylint = {version = "^2.16.2", optional = true}
#graphviz = {version = "^0.20.1", optional = true}
pyaraucaria = {git = "https://github.com/araucaria-project/pyaraucaria.git"}
#jupyter = {version = "^1.0.0", optional = true}
#requests = {version = "^2.30.0", optional = true}
#pyunifiprotect = "^4.9.0"
#scikit-learn = ">=1.3.0"
serverish = {version = "^1.3.0", extras = ["messenger"]}
nats-py = "^2.3.1"
#astroplan = "^0.9.0"




[tool.poetry.scripts]
tests = "test.run_tests:main"
server = "obsrv.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
